--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_weight="1"
-        android:text="@string/input_tip"
+        android:text=""
         android:textSize="25dp"
         android:textColor="#FF2D2D"
         android:gravity="center"
