--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/search_editTxt"
         android:layout_width="217dp"
         android:layout_height="49dp"
         android:layout_marginStart="124dp"
@@ -40,8 +40,8 @@
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
         android:text="語音"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        app:layout_constraintRight_toLeftOf="@id/editText"
+        app:layout_constraintBottom_toBottomOf="@+id/search_editTxt"
+        app:layout_constraintRight_toLeftOf="@id/search_editTxt"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -51,9 +51,9 @@
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
         android:text="輸入"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
+        app:layout_constraintBottom_toBottomOf="@+id/search_editTxt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/editText" />
+        app:layout_constraintLeft_toRightOf="@id/search_editTxt" />
 
     <Button
         android:id="@+id/button5"
@@ -64,7 +64,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="664dp"
         android:text="+"
-        app:layout_constraintBottom_toBottomOf="@id/editText"
+        app:layout_constraintBottom_toBottomOf="@id/search_editTxt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
