--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
-        android:text="返回"
+        android:text="@string/back"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:text="@string/lottery"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <SearchView
         android:id="@+id/searchView"
@@ -22,67 +32,86 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button1"
-        />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:text="抽"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/button1" />
 
     <androidx.cardview.widget.CardView
-
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:cardElevation="10dp"
         app:cardCornerRadius="25dp"
+        app:cardElevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button1">
 
-        <TextView
-            android:id="@+id/name1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="球球"
-            android:textSize="30dp"
-            />
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="131dp"
-            android:layout_height="96dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            app:srcCompat="@drawable/photo1" />
+            <ImageView
+                android:id="@+id/icon_img"
+                android:layout_width="131dp"
+                android:layout_height="96dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                app:srcCompat="@drawable/photo1" />
 
-        <TextView
-            android:id="@+id/say1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="140dp"
-            android:layout_marginTop="55dp"
-            android:text="2020快樂"
-            android:textSize="20dp" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
 
+                <TextView
+                    android:id="@+id/name_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="bottom"
+                    android:text="球球"
+                    android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/time1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="340dp"
-            android:layout_marginTop="20dp"
-            android:text="下午 2:00"
-            android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/say_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="2020快樂"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/time_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="10dp"
+                    android:text="下午 2:00"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/red_tip_text"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/red"
+                    android:gravity="center"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="20dp"
+                    android:text="2"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -90,12 +119,30 @@
         android:layout_width="match_parent"
         android:layout_height="135dp"
         android:layout_marginTop="5dp"
-        app:cardElevation="10dp"
         app:cardCornerRadius="25dp"
+        app:cardElevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardView">
+
+        <ImageView
+
+            android:id="@+id/imageView"
+            android:layout_width="131dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="20dp"
+
+            app:srcCompat="@drawable/photo" />
+
+        <ImageView
+            android:id="@+id/imageView16"
+            android:layout_width="42dp"
+            android:layout_height="47dp"
+            android:layout_marginLeft="350dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/red" />
 
         <TextView
             android:id="@+id/say2"
@@ -108,24 +155,6 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/name2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="140dp"
-            android:layout_marginTop="15dp"
-            android:text="卡路里"
-            android:textSize="30dp" />
-
-        <ImageView
-
-            android:id="@+id/imageView"
-            android:layout_width="131dp"
-            android:layout_height="96dp"
-            android:layout_marginTop="20dp"
-
-            app:srcCompat="@drawable/photo" />
-
-        <TextView
             android:id="@+id/time2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -134,16 +163,17 @@
             android:text="上午  7:39"
             android:textSize="15dp" />
 
-        <ImageView
-            android:id="@+id/imageView16"
-            android:layout_width="42dp"
-            android:layout_height="47dp"
-            android:layout_marginLeft="350dp"
-            android:layout_marginTop="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/red" />
+        <TextView
+            android:id="@+id/name2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="140dp"
+            android:layout_marginTop="15dp"
+            android:text="卡路里"
+            android:textSize="30dp" />
 
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
@@ -199,8 +229,8 @@
         android:layout_width="match_parent"
         android:layout_height="135dp"
         android:layout_marginTop="5dp"
-        app:cardElevation="10dp"
         app:cardCornerRadius="25dp"
+        app:cardElevation="10dp"
         app:layout_constraintTop_toBottomOf="@id/cardView2"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="571dp">
@@ -242,9 +272,6 @@
             android:text="下午  5:46"
             android:textSize="15dp" />
     </androidx.cardview.widget.CardView>
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
