--- a/app/src/main/res/layout/activity_praticipate.xml
+++ b/app/src/main/res/layout/activity_praticipate.xml
@@ -72,11 +72,11 @@
                 android:text="返回"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintStart_toEndOf="@+id/icon_img"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/icon_img"
                 android:layout_width="34dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="16dp"
