--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -21,7 +21,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/icon_img"
                     android:layout_width="34dp"
                     android:layout_height="35dp"
                     android:layout_marginStart="28dp"
@@ -174,7 +174,7 @@
                     tools:ignore="MissingConstraints" />
 
                 <ImageButton
-                    android:id="@+id/imageButton4"
+                    android:id="@+id/imgbtn_4"
                     android:layout_width="112dp"
                     android:layout_height="119dp"
                     android:layout_marginEnd="10dp"
