--- a/app/src/main/res/layout/activity_cancel.xml
+++ b/app/src/main/res/layout/activity_cancel.xml
@@ -193,7 +193,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/back_btn"
         android:layout_width="387dp"
         android:layout_height="54dp"
         android:layout_marginTop="46dp"
