--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -175,7 +175,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tableRow" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/pet_icon_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="480dp"
