--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,101 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".login">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:srcCompat="@drawable/j"
-        tools:ignore="MissingConstraints"
-        />
-
-    <EditText
-        android:id="@+id/id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginLeft="36dp"
-        app:layout_constraintHorizontal_weight="1"
-        android:ems="10"
-        android:hint="@string/account"
-        android:inputType="textPersonName"
-        android:textSize="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+    <Button
+        android:id="@+id/login"
+        android:layout_width="208dp"
+        android:layout_height="52dp"
+        android:layout_below="@+id/yesnull"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="@string/btn_login"
+        android:textColor="#FFFFFF"
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginLeft="36dp"
-        app:layout_constraintHorizontal_weight="1"
+        android:layout_below="@+id/id"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:textSize="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/id" />
+        android:textSize="25dp" />
 
-    <TextView
-        android:id="@+id/yesnull"
+    <EditText
+        android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_weight="1"
-        android:text=""
-        android:textSize="25dp"
-        android:textColor="#FF2D2D"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/pwd" />
+        android:layout_below="@+id/logo"
+        android:ems="10"
+        android:hint="@string/account"
+        android:inputType="textPersonName"
+        android:textSize="25dp" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="208dp"
-        android:layout_height="52dp"
-        app:layout_constraintHorizontal_weight="1"
-        android:background="@android:color/holo_blue_dark"
-        android:text="@string/btn_login"
-        android:textColor="#FFFFFF"
-        android:textSize="25dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yesnull" />
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/j"
+        tools:ignore="MissingConstraints" />
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintTop_toBottomOf="@+id/login">
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:clickable="true"
+            android:gravity="center"
             android:text="@string/register"
-            android:textSize="30sp"
-            />
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/forget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:clickable="true"
+            android:gravity="center"
             android:text="@string/forget_psd"
-            android:textSize="30sp"
-            />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:textSize="30sp" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/yesnull"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pwd"
+        android:gravity="center"
+        android:text="@string/input_tip"
+        android:textColor="#FF2D2D"
+        android:textSize="25dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
